Revised row-hidden class to use display: none instead of visibility: collapse to fix an issue where Safari browser showed a gao in the table where the hidden row exists

--- a/index.css
+++ b/index.css
@@ -91,7 +91,8 @@ td {
 }
 
 .row-hidden {
-  visibility: collapse;
+  /* visibility: collapse; */
+  display: none;
 }
 
 .message-alert {
